worked on frontend, added pages for managing cashflow plans, assumptions and about page, fixed jwt issues